<resources>

    <string name="app_name">佳佳康复</string>


    <string name="default_content_data_fail_describe">暂无此信息</string>
    <string name="default_network_data_fail_describe">网络错误，请检查网络</string>
    <string name="default_network_reload_describe">网络不太好哦~点击重新加载</string>

    <!-- 常用字符串 -->
    <string name="waiting_loading">正在加载...</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="select_all">全选</string>
    <string name="submit">提交</string>
    <string name="complete">完成</string>
    <string name="alert">提示</string>

    <string name="logout">退出登录</string>
    <string name="version">版本</string>
    <string name="mark_app">给佳佳康复打分</string>
    <string name="name">名字</string>

    <string name="startLocation">开始定位</string>
    <string name="stopLocation">停止定位</string>
    <string name="title_hight_accuracy">高精度模式功能展示</string>
    <string name="user_address">常驻地址</string>
    <string name="user_hospital">所在医院</string>
    <string name="user_special">擅长方向</string>
    <string name="user_office">所在科室</string>
    <string name="user_work_type">工作方式</string>

    <string name="title_alter_info">填写信息</string>
    <string name="title_alter_info_name">填写名字</string>
    <string name="title_alter_info_profession">更改职位</string>
    <string name="title_alter_info_experts">擅长方向</string>
    <string name="title_alter_info_address">常驻地址</string>
    <string name="title_alter_info_hospital">所在医院</string>
    <string name="simple_alter_save">保存</string>
    <string name="scan_text"></string>

    <string name="dialog_title_prompt">提示</string>

    <string name="next_step">下一步</string>

    <string name="login_title">登录</string>
    <string name="login_login">登录</string>
    <string name="login_passw_hint">请输入密码</string>
    <string name="login_username_hint">请输入手机号码</string>
    <string name="login_register_entry">新用户点击注册</string>
    <string name="login_forget_entry">忘记密码?</string>
    <string name="login_passw_error_tip">用户名或密码不正确</string>
    <string name="login_find_passw_input_tips">请输入正确的手机号码</string>


    <string name="tip_double_click_exit">再次点击退出</string>


    <string name="web_agreement_title">用户使用协议</string>

    <string name="register_entry_phone_hint">请填写您的手机号</string>
    <string name="set_password_hint">请输入6-16位密码</string>
    <string name="set_password_again_hint">请再次确认密码</string>
    <string name="register_verify_code_hint">请输入验证码</string>
    <string name="register_get_verify_code">获取验证码</string>
    <string name="register_entry_to_login">你也可以通过账户登录</string>

    <string name="verify_fail">验证码校验失败</string>
    <string name="verify_success">验证成功</string>

    <string name="regist_next_step">下一步</string>
    <string name="regist_phoneNumber_error_hint">请输入正确的手机号</string>
    <string name="regist_passw_error_hint">两次输入的密码不一致</string>
    <string name="regist_verlify_succeed">验证码校验成功</string>
    <string name="regist_send_sms_succees">短信已发送，请稍候</string>
    <string name="regist_obtiain_sms_fail">获取验证码失败</string>
    <string name="regist_verlifu_fail">验证失败</string>

    <string name="regist_title">注册</string>


    <string name="mine_title">我的</string>
    <string name="mine_name">姓名:</string>
    <string name="mine_invite_code">邀请好友</string>
    <string name="mine_customer_number">我的患者</string>
    <string name="mine_enter_tips">请填写相关资料信息</string>
    <string name="mine_free_time">选择时间</string>
    <string name="mine_format_customer_nums">%d人</string>
    <string name="logout_dialog_message">确定注销此账户？</string>
    <string name="mine_profession">职位:</string>

    <string name="addrSearch_myAddr">我的地址</string>
    <string name="address_search_title">填写地址</string>
    <string name="capture">拍摄</string>
    <string name="choose_from_gallery">相册选择</string>
    <string name="error_alias_empty">设置错误，别名不应该为空</string>
    <string name="error_tag_gs_empty">设置错误，tag无效</string>
    <string name="addrSearch_input_hint">搜索地址（如小区名、街道名）</string>
    <string name="addrSearch_detial_hint">详细地址，例如单元、门牌号等</string>
    <string name="addrSearch_detial_toast">请出入详细地址</string>
    <string name="addrSearch_addr_input_toast">请输入地址</string>
    <string name="addrSearch_addr_chose_tip">请选择提示的地址</string>


    <!-- 我的患者列表中 -->
    <string name="customerList_title">我的患者</string>
    <string name="customerList_all">&#160;&#160;全部 &#160;</string>
    <string name="customerList_status_registed">仅注册用户</string>
    <string name="customerList_status_consumed">服务中患者</string>
    <string name="customerList_item_service_time">服务时间：</string>
    <string name="customerList_item_name">用户名：</string>
    <string name="customerList_no_customer_register_tip">暂时没有推荐的人注册</string>
    <string name="customerList_no_customer_consume_tip">暂时没有推荐的人消费</string>
    <string name="customerList_item_register_time">注册时间：</string>


    <string name="edit_mine_info">填写资料</string>


    <string name="reset_passw_title">重置密码</string>
    <string name="reset_passw_input_tel">请输入要找回的手机号</string>
    <string name="reset_passw_passw">请输入6-16位新的密码</string>
    <string name="reset_passw_passw_again">请重新输入密码</string>


    <string name="qr_dialog_tips">出示您的二维码\n邀请患者加入佳佳康复</string>
    <string name="reset_passw_phone_tip">请输入需要重置的手机号码</string>

    <string name="update_right_now">现在更新</string>
    <string name="update_later">下次再说</string>
    <string name="update_downloading">正在下载</string>
    <string name="update_least_hint">已经是最新版本，无需升级版本</string>
    <string name="update_new_version_dialog_title">发现新版本</string>
    <string name="update_force_update_message">您的版本太旧，部分功能已不支持。为了让您拥有更好的体验，请更新新版本。</string>
    <string name="update_get_version_info">正在获取版本信息，请稍候</string>


    <string name="title_activity_setting">SettingActivity</string>
    <string name="verify_interval_note">重新发送剩余时间%ds</string>
    <string name="request_again">重新发送</string>
    <string name="register_success">恭喜，注册成功</string>
    <string name="register_entry_agree_agreement">注册表示您已阅读并同意</string>
    <string name="register_entry_agreement">佳佳康复使用协议</string>
    <string name="profession_choose_tip">请选择您所在的工作主体</string>
    <string name="mine_qrcode">我的二维码</string>


    <string name="mine_info_title">我的基本信息</string>
    <string name="init_profession_title">身份认证</string>
    <string name="init_user_info_title">完善基本信息</string>
    <string name="alter_user_info_title">基本信息</string>
    <string name="setting_title">设置</string>
    <string name="customers_sums">患者总数</string>
    <string name="alter_suceess">修改成功</string>
    <string name="profession">职业</string>
    <string name="profession_change">职业更改为</string>
    <string name="init_info_tip">完善信息，让佳佳康复更懂您</string>

    <!-- write by liyudong -->
    <string name="wonderful_info_tip"></string>
    <string name="wonderful_info_goodanswer">我的韧带撕裂，徐亚怎样康复才能快速好转？</string>
    <string name="mine_tv_info_assessment">我的评估详情</string>
    <string name="mine_tv_info_invitation">我的帖子</string>
    <string name="mine_tv_info_professinal">我的专家说</string>
    <string name="mine_tv_info_problem">我的问题</string>
    <string name="mine_tv_info_focuson">我的关注</string>
    <string name="mine_tv_info_service">我的服务</string>
    <string name="mine_tv_info_fund">我的佳佳积分</string>
    <string name="mine_tv_info_activities">我的活动</string>
    <string name="mine_tv_info_authentication">身份认证</string>
    <string name="mine_tv_info_authentication_right">专业人员可在此认证身份，获取身份特权</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="title_main">高德定位SDK功能展示</string>
    <string name="title_battery_saving">低功耗模式功能展示</string>
    <string name="title_device_sensors">仅设备模式功能展示</string>

    <string name="title_lastLocation">最后位置功能展示</string>
    <string name="title_geoFenceAlert">地理围栏功能展示</string>
    <string name="title_assistantLocation">H5辅助定位展示</string>
    <string name="title_alarmCPU">定时唤起CPU示例</string>

    <string name="battery_saving">低功耗模式</string>
    <string name="battery_saving_dec">仅使用高德网络定位，耗电量最低</string>
    <string name="battery_saving_info">低功耗模式</string>

    <string name="device_sensors">仅设备模式</string>
    <string name="device_sensors_dec">无需网络连接，使用手机GPS模块定位，室外定位精度高，室内定位成功率低，耗电量高</string>

    <string name="hight_accuracy">高精度模式</string>
    <string name="hight_accuracy_dec">同时使用GPS和高德网络定位，优先返回精度高的定位结果，定位精度高，耗电量低</string>

    <string name="lastLocation">最后位置</string>
    <string name="lastLocation_dec">获取最后一次定位的位置，此位置是一个历史位置</string>

    <string name="geoFenceAlert">地理围栏</string>
    <string name="geoFenceAlert_dec">可以设置对进入或离开区域进行提醒</string>

    <string name="assistantLocation">H5辅助定位</string>
    <string name="assistantLocation_dec">展示H5辅助定位功能</string>

    <string name="alarmCPU">定时唤起cpu</string>
    <string name="alarmCPU_dec">通过一个闹钟程序后台定时唤起cpu</string>

    <string name="location_contiue">持续定位</string>
    <string name="location_once">单次定位</string>
    <string name="interval">定位周期</string>
    <string name="millsecond">毫秒</string>
    <string name="needAddress">逆地理编码</string>
    <string name="cacheAble">开启缓存</string>
    <string name="gpsFirst">GPS优先</string>

    <string name="alarmInterval">唤醒周期</string>
    <string name="second">秒</string>


    <string name="getLastLocation">获取最后位置</string>

    <string name="fenceRadius">围栏半径</string>
    <string name="meter">米</string>
    <string name="alertIn">进入提醒</string>
    <string name="alertOut">离开提醒</string>

    <string name="addFence">添加围栏</string>
    <string name="removeFence">移除围栏</string>

    <string name="startAssistantLocation">启动H5辅助定位</string>
    <string name="stopAssistantLocation">停止H5辅助定位</string>
    <string name="urlLocation">浏览器定位</string>
    <string name="assistantLocationInfo">辅助定位已经启动，请点击模拟浏览器请求或者在浏览器中输入http://127.0.0.1:43689/进行测试</string>

    <string name="defaultInteval">1000</string>

    <string name="useCache">启用定位缓存</string>
    <!-- Preference framework strings. -->
    <string name="userid_found">用户信息已存在，正在跳转登录操作…</string>
    <string name="logining">使用%s帐号登录中…</string>
    <string name="auth_cancel">授权操作已取消</string>
    <string name="auth_error">授权操作遇到错误，请阅读Logcat输出</string>
    <string name="auth_complete">授权成功，正在跳转登录操作…</string>
    <string name="if_register_needed">如果您需要注册功能…</string>
    <string name="error_network">搜索失败,请检查网络连接！</string>
    <string name="error_key">key验证无效！</string>
    <string name="error_other">未知错误，请稍后重试!错误码为</string>
    <string name="no_result">对不起，没有搜索到相关数据！</string>
</resources>