<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#d9d6d8"
    android:orientation="vertical" >

    <Button
        android:id="@+id/bt_register_ppw_capture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="@string/capture" />

    <Button
        android:id="@+id/bt_register_ppw_choose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginTop="5dp"
        android:text="@string/choose_from_gallery" />
	
    <Button
        android:id="@+id/bt_register_ppw_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginTop="10dp"
        android:text="@string/cancel" />

</LinearLayout>