<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fl_alter_info_photo_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_page_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@drawable/line_grey_horizontal"
        android:orientation="vertical"
        android:showDividers="middle">


        <LinearLayout
            android:id="@+id/ly_mine_basic_info"
            style="@style/style_common_item.linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.yikang.app.yikangserver.view.CircleImageView
                android:id="@+id/iv_alter_info_avatar"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/doctor_default_avatar" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:textColor="@color/common_text_grey"
                android:textSize="@dimen/common_text_size_small"
                android:drawableRight="@drawable/ic_arrow_right_grey"
                android:text="完善信息，让佳佳康复更懂您" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/ly_info_name"
            style="@style/style_common_item.linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/common_text_color"
                android:textSize="@dimen/common_text_size"
                android:text="@string/name" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tv_alter_info_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/common_text_grey"
                android:textSize="@dimen/common_text_size_small"
                android:drawablePadding="10dp"
                android:drawableRight="@drawable/ic_arrow_right_grey" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/ly_info_profession"
            style="@style/style_common_item.linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/common_text_color"
                android:textSize="@dimen/common_text_size"
                android:text="@string/profession" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tv_alter_info_profession"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:textColor="@color/common_text_grey"
                android:textSize="@dimen/common_text_size_small"
                android:drawableRight="@drawable/ic_arrow_right_grey" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/ly_info_work_type"
            style="@style/style_common_item.linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/common_text_color"
                android:textSize="@dimen/common_text_size"
                android:text="@string/user_work_type" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <com.yikang.app.yikangserver.view.TextSpinner
                android:id="@+id/tv_alter_info_work_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:textColor="@color/common_text_grey"
                android:textSize="@dimen/common_text_size_small"
                android:enabled="false"
                android:drawableRight="@drawable/ic_arrow_right_grey" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ly_info_address"
            style="@style/style_common_item.linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/common_text_color"
                android:textSize="@dimen/common_text_size"
                android:text="@string/user_address" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tv_alter_info_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:textColor="@color/common_text_grey"
                android:textSize="@dimen/common_text_size_small"
                android:drawableRight="@drawable/ic_arrow_right_grey" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/ly_info_hospital"
            style="@style/style_common_item.linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/common_text_color"
                android:textSize="@dimen/common_text_size"
                android:text="@string/user_hospital" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tv_alter_info_hospital"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:textColor="@color/common_text_grey"
                android:textSize="@dimen/common_text_size_small"
                android:drawableRight="@drawable/ic_arrow_right_grey" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/ly_info_office"
            style="@style/style_common_item.linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/common_text_color"
                android:textSize="@dimen/common_text_size"
                android:text="@string/user_office" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <com.yikang.app.yikangserver.view.TextSpinner
                android:id="@+id/tv_alter_info_office"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:textColor="@color/common_text_grey"
                android:textSize="@dimen/common_text_size_small"
                android:drawableRight="@drawable/ic_arrow_right_grey" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/ly_info_spacial"
            style="@style/style_common_item.linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/common_text_color"
                android:textSize="@dimen/common_text_size"
                android:text="@string/user_special" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tv_alter_info_special"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:textColor="@color/common_text_grey"
                android:textSize="@dimen/common_text_size_small"
                android:drawableRight="@drawable/ic_arrow_right_grey" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>
